# cpp_A2

./: A2_uml.uxf  CMakeLists.txt  CalculateAlertLevelStrategy.h  CompositeHighestAlertLevel.cpp  Design document.docx  ERushCalculateStrategy.cpp  GPNotificationSystemFacade.h  HospitalAlertSystemFacade.h  NocapSyndromeCalculateStrategy.h  Patient.cpp  Patient.h  PatientFileLoaderAdapter.cpp  PatientFileLoaderAdapter.h  PatientManagementSystem.cpp
A2/: A2.cpp  A2.h  AmogusSusCalcualteStrategy.cpp  AmogusSusCalcualteStrategy.h  AmogusSusCalculateStrategy.cpp  AmogusSusCalculateStrategy.h  CMakeLists.txt  CalcualteAlertLevelStrategy.h  CalculateAlertLevelStrategy.h  CompositeHighestAlertLevel.cpp  CompositeHighestAlertLevel.h  ERushCalculateStrategy.cpp  ERushCalculateStrategy.h  NocapSyndromeCalculateStrategy.cpp  Patient.cpp  Patient.h  PatientFileLoader.cpp  PatientFileLoaderAdapter.cpp  PatientFileLoaderAdapter.h  PatientManagementSystem.cpp  PatientManagementSystem.h  PatientObserver.h  TicctoccBrainDamageCalculateStrategy.cpp  TicctoccBrainDamageCalculateStrategy.h
